// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioBreakdown should render empty (filtered) message when there are no assets that match the current network filters 1`] = `
<DocumentFragment>
  <div
    class="border border-solid border-theme-secondary-300 dark:border-theme-secondary-800 rounded-lg text-theme-secondary-text text-center leading-5 p-6"
    data-testid="EmptyBlock"
  >
    <div>
      Please enable at least one public network to display your portfolio report.
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioBreakdown should render empty block when portfolio is empty and there are filtered networks 1`] = `
<DocumentFragment>
  <div
    class="border border-solid border-theme-secondary-300 dark:border-theme-secondary-800 rounded-lg text-theme-secondary-text text-center leading-5 p-6"
    data-testid="EmptyBlock"
  >
    <div>
      Please enable at least one public network to display your portfolio report.
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioBreakdown should render loading when items converted balance contain a NaN value 1`] = `
<DocumentFragment>
  <div
    class="py-4 px-6 bg-theme-secondary-100 dark:bg-black rounded-xl flex"
    data-testid="PortfolioBreakdownSkeleton"
  >
    <div
      class="flex space-x-4 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Your Balance
        </span>
        <div
          class="flex items-center h-7"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 100px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Assets
        </span>
        <div
          class="flex items-center h-7"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 20px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Wallets
        </span>
        <div
          class="flex items-center h-7"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 20px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex-1 ml-6 self-end"
    >
      <span>
        <span
          class="flex items-center leading-none"
        >
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style="width: 0px; height: 8px;"
          >
            ‌
          </span>
          ‌
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioBreakdown should render loading when profile is not restored yet 1`] = `
<DocumentFragment>
  <div
    class="py-4 px-6 bg-theme-secondary-100 dark:bg-black rounded-xl flex"
    data-testid="PortfolioBreakdownSkeleton"
  >
    <div
      class="flex space-x-4 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Your Balance
        </span>
        <div
          class="flex items-center h-7"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 100px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Assets
        </span>
        <div
          class="flex items-center h-7"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 20px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Wallets
        </span>
        <div
          class="flex items-center h-7"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 20px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex-1 ml-6 self-end"
    >
      <span>
        <span
          class="flex items-center leading-none"
        >
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style="width: 0px; height: 8px;"
          >
            ‌
          </span>
          ‌
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioBreakdown should render loading when syncing exchange rates 1`] = `
<DocumentFragment>
  <div
    class="py-4 px-6 bg-theme-secondary-100 dark:bg-black rounded-xl flex"
    data-testid="PortfolioBreakdownSkeleton"
  >
    <div
      class="flex space-x-4 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Your Balance
        </span>
        <div
          class="flex items-center h-7"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 100px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Assets
        </span>
        <div
          class="flex items-center h-7"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 20px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Wallets
        </span>
        <div
          class="flex items-center h-7"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 20px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex-1 ml-6 self-end"
    >
      <span>
        <span
          class="flex items-center leading-none"
        >
          <span
            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
            style="width: 0px; height: 8px;"
          >
            ‌
          </span>
          ‌
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioBreakdown should render with dark mode = false 1`] = `
<DocumentFragment>
  <div
    class="py-4 px-6 bg-theme-secondary-100 dark:bg-black rounded-xl flex"
    data-testid="PortfolioBreakdown"
  >
    <div
      class="flex space-x-4 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Your Balance
        </span>
        <span
          class="whitespace-nowrap text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="Amount"
        >
          $100.00
        </span>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Assets
        </span>
        <span
          class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="PortfolioBreakdown__assets"
        >
          2
        </span>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Wallets
        </span>
        <span
          class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="PortfolioBreakdown__wallets"
        >
          2
        </span>
      </div>
    </div>
    <div
      class="flex-1 ml-6"
    >
      <div>
        <div
          class="absolute z-10 duration-200 transition-opacity opacity-0"
          data-testid="TooltipContainer"
        />
        <div
          class="flex justify-end mb-1"
          data-testid="LineGraph__legend"
        >
          <div
            class="flex justify-end mb-1"
          >
            <div
              class="flex space-x-4"
            >
              <div
                class="flex items-center space-x-1 text-sm font-semibold"
              >
                <span
                  class="h-3 w-1 rounded bg-theme-success-600"
                />
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-200"
                >
                  ARK
                </span>
                <span
                  class="text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  85%
                </span>
              </div>
              <div
                class="flex items-center space-x-1 text-sm font-semibold"
              >
                <span
                  class="h-3 w-1 rounded bg-theme-warning-600"
                />
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-200"
                >
                  LSK
                </span>
                <span
                  class="text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  15%
                </span>
              </div>
            </div>
            <div
              class="border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-4 pl-4"
            >
              <button
                class="font-semibold text-sm link"
                type="button"
              >
                More Details
              </button>
            </div>
          </div>
        </div>
        <svg
          class="w-full h-5"
          data-testid="LineGraph__svg"
        >
          <g
            data-testid="LineGraph__item"
          >
            <rect
              class="fill-current text-theme-success-600"
              data-testid="LineGraph__item-hover-area"
              height="20"
              id="rectHoverArea__0"
              opacity="0"
              pointer-events="visiblePainted"
              rx="0"
              width="536"
              x="0"
              y="0"
            />
            <rect
              class="fill-current text-theme-success-600"
              height="8"
              pointer-events="none"
              rx="4"
              width="536"
              x="0"
              y="8"
            >
              <animate
                attributeName="height"
                begin="rectHoverArea__0.mouseover"
                dur="0.1s"
                fill="freeze"
                from="8"
                to="16"
              />
              <animate
                attributeName="height"
                begin="rectHoverArea__0.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="16"
                to="8"
              />
              <animate
                attributeName="rx"
                begin="rectHoverArea__0.mouseover"
                dur="0.1s"
                fill="freeze"
                from="4"
                to="8"
              />
              <animate
                attributeName="rx"
                begin="rectHoverArea__0.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="8"
                to="4"
              />
              <animate
                attributeName="y"
                begin="rectHoverArea__0.mouseover"
                dur="0.1s"
                fill="freeze"
                from="8"
                to="0"
              />
              <animate
                attributeName="y"
                begin="rectHoverArea__0.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="0"
                to="8"
              />
            </rect>
          </g>
          <g
            data-testid="LineGraph__item"
          >
            <rect
              class="fill-current text-theme-warning-600"
              data-testid="LineGraph__item-hover-area"
              height="20"
              id="rectHoverArea__1"
              opacity="0"
              pointer-events="visiblePainted"
              rx="0"
              width="96"
              x="544"
              y="0"
            />
            <rect
              class="fill-current text-theme-warning-600"
              height="8"
              pointer-events="none"
              rx="4"
              width="96"
              x="544"
              y="8"
            >
              <animate
                attributeName="height"
                begin="rectHoverArea__1.mouseover"
                dur="0.1s"
                fill="freeze"
                from="8"
                to="16"
              />
              <animate
                attributeName="height"
                begin="rectHoverArea__1.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="16"
                to="8"
              />
              <animate
                attributeName="rx"
                begin="rectHoverArea__1.mouseover"
                dur="0.1s"
                fill="freeze"
                from="4"
                to="8"
              />
              <animate
                attributeName="rx"
                begin="rectHoverArea__1.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="8"
                to="4"
              />
              <animate
                attributeName="y"
                begin="rectHoverArea__1.mouseover"
                dur="0.1s"
                fill="freeze"
                from="8"
                to="0"
              />
              <animate
                attributeName="y"
                begin="rectHoverArea__1.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="0"
                to="8"
              />
            </rect>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioBreakdown should render with dark mode = true 1`] = `
<DocumentFragment>
  <div
    class="py-4 px-6 bg-theme-secondary-100 dark:bg-black rounded-xl flex"
    data-testid="PortfolioBreakdown"
  >
    <div
      class="flex space-x-4 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Your Balance
        </span>
        <span
          class="whitespace-nowrap text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="Amount"
        >
          $100.00
        </span>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Assets
        </span>
        <span
          class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="PortfolioBreakdown__assets"
        >
          2
        </span>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Wallets
        </span>
        <span
          class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="PortfolioBreakdown__wallets"
        >
          2
        </span>
      </div>
    </div>
    <div
      class="flex-1 ml-6"
    >
      <div>
        <div
          class="absolute z-10 duration-200 transition-opacity opacity-0"
          data-testid="TooltipContainer"
        />
        <div
          class="flex justify-end mb-1"
          data-testid="LineGraph__legend"
        >
          <div
            class="flex justify-end mb-1"
          >
            <div
              class="flex space-x-4"
            >
              <div
                class="flex items-center space-x-1 text-sm font-semibold"
              >
                <span
                  class="h-3 w-1 rounded bg-theme-success-600"
                />
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-200"
                >
                  ARK
                </span>
                <span
                  class="text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  85%
                </span>
              </div>
              <div
                class="flex items-center space-x-1 text-sm font-semibold"
              >
                <span
                  class="h-3 w-1 rounded bg-theme-warning-600"
                />
                <span
                  class="text-theme-secondary-700 dark:text-theme-secondary-200"
                >
                  LSK
                </span>
                <span
                  class="text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  15%
                </span>
              </div>
            </div>
            <div
              class="border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-4 pl-4"
            >
              <button
                class="font-semibold text-sm link"
                type="button"
              >
                More Details
              </button>
            </div>
          </div>
        </div>
        <svg
          class="w-full h-5"
          data-testid="LineGraph__svg"
        >
          <g
            data-testid="LineGraph__item"
          >
            <rect
              class="fill-current text-theme-success-600"
              data-testid="LineGraph__item-hover-area"
              height="20"
              id="rectHoverArea__0"
              opacity="0"
              pointer-events="visiblePainted"
              rx="0"
              width="536"
              x="0"
              y="0"
            />
            <rect
              class="fill-current text-theme-success-600"
              height="8"
              pointer-events="none"
              rx="4"
              width="536"
              x="0"
              y="8"
            >
              <animate
                attributeName="height"
                begin="rectHoverArea__0.mouseover"
                dur="0.1s"
                fill="freeze"
                from="8"
                to="16"
              />
              <animate
                attributeName="height"
                begin="rectHoverArea__0.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="16"
                to="8"
              />
              <animate
                attributeName="rx"
                begin="rectHoverArea__0.mouseover"
                dur="0.1s"
                fill="freeze"
                from="4"
                to="8"
              />
              <animate
                attributeName="rx"
                begin="rectHoverArea__0.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="8"
                to="4"
              />
              <animate
                attributeName="y"
                begin="rectHoverArea__0.mouseover"
                dur="0.1s"
                fill="freeze"
                from="8"
                to="0"
              />
              <animate
                attributeName="y"
                begin="rectHoverArea__0.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="0"
                to="8"
              />
            </rect>
          </g>
          <g
            data-testid="LineGraph__item"
          >
            <rect
              class="fill-current text-theme-warning-600"
              data-testid="LineGraph__item-hover-area"
              height="20"
              id="rectHoverArea__1"
              opacity="0"
              pointer-events="visiblePainted"
              rx="0"
              width="96"
              x="544"
              y="0"
            />
            <rect
              class="fill-current text-theme-warning-600"
              height="8"
              pointer-events="none"
              rx="4"
              width="96"
              x="544"
              y="8"
            >
              <animate
                attributeName="height"
                begin="rectHoverArea__1.mouseover"
                dur="0.1s"
                fill="freeze"
                from="8"
                to="16"
              />
              <animate
                attributeName="height"
                begin="rectHoverArea__1.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="16"
                to="8"
              />
              <animate
                attributeName="rx"
                begin="rectHoverArea__1.mouseover"
                dur="0.1s"
                fill="freeze"
                from="4"
                to="8"
              />
              <animate
                attributeName="rx"
                begin="rectHoverArea__1.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="8"
                to="4"
              />
              <animate
                attributeName="y"
                begin="rectHoverArea__1.mouseover"
                dur="0.1s"
                fill="freeze"
                from="8"
                to="0"
              />
              <animate
                attributeName="y"
                begin="rectHoverArea__1.mouseleave"
                dur="0.15s"
                fill="freeze"
                from="0"
                to="8"
              />
            </rect>
          </g>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioBreakdown should render zero balance state with dark mode = false 1`] = `
<DocumentFragment>
  <div
    class="py-4 px-6 bg-theme-secondary-100 dark:bg-black rounded-xl flex"
    data-testid="PortfolioBreakdown"
  >
    <div
      class="flex space-x-4 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Your Balance
        </span>
        <span
          class="whitespace-nowrap text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="Amount"
        >
          $0.00
        </span>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Assets
        </span>
        <span
          class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="PortfolioBreakdown__assets"
        >
          2
        </span>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Wallets
        </span>
        <span
          class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="PortfolioBreakdown__wallets"
        >
          2
        </span>
      </div>
    </div>
    <div
      class="flex-1 ml-6"
    >
      <div>
        <div
          class="absolute z-10 duration-200 transition-opacity opacity-0"
          data-testid="TooltipContainer"
        />
        <div
          class="flex justify-end mb-1"
          data-testid="LineGraph__legend"
        >
          <div
            class="flex justify-end mb-1"
          >
            <div
              class="flex space-x-4"
            />
            <div
              class="border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-4 pl-4"
            >
              <button
                class="font-semibold text-sm cursor-not-allowed text-theme-secondary-500 dark:text-theme-secondary-700"
                disabled=""
                type="button"
              >
                More Details
              </button>
            </div>
          </div>
        </div>
        <svg
          class="w-full h-5"
          data-testid="LineGraph__svg"
        >
          <rect
            class="fill-current text-theme-secondary-300 dark:text-theme-secondary-800"
            data-testid="LineGraph__empty"
            height="8"
            rx="4"
            width="640"
            x="0"
            y="8"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioBreakdown should render zero balance state with dark mode = true 1`] = `
<DocumentFragment>
  <div
    class="py-4 px-6 bg-theme-secondary-100 dark:bg-black rounded-xl flex"
    data-testid="PortfolioBreakdown"
  >
    <div
      class="flex space-x-4 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Your Balance
        </span>
        <span
          class="whitespace-nowrap text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="Amount"
        >
          $0.00
        </span>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Assets
        </span>
        <span
          class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="PortfolioBreakdown__assets"
        >
          2
        </span>
      </div>
      <div
        class="flex flex-col font-semibold space-y-1 pl-4 first:pl-0"
      >
        <span
          class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700 whitespace-nowrap"
        >
          Wallets
        </span>
        <span
          class="text-lg text-theme-secondary-900 dark:text-theme-secondary-200"
          data-testid="PortfolioBreakdown__wallets"
        >
          2
        </span>
      </div>
    </div>
    <div
      class="flex-1 ml-6"
    >
      <div>
        <div
          class="absolute z-10 duration-200 transition-opacity opacity-0"
          data-testid="TooltipContainer"
        />
        <div
          class="flex justify-end mb-1"
          data-testid="LineGraph__legend"
        >
          <div
            class="flex justify-end mb-1"
          >
            <div
              class="flex space-x-4"
            />
            <div
              class="border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-4 pl-4"
            >
              <button
                class="font-semibold text-sm cursor-not-allowed text-theme-secondary-500 dark:text-theme-secondary-700"
                disabled=""
                type="button"
              >
                More Details
              </button>
            </div>
          </div>
        </div>
        <svg
          class="w-full h-5"
          data-testid="LineGraph__svg"
        >
          <rect
            class="fill-current text-theme-secondary-300 dark:text-theme-secondary-800"
            data-testid="LineGraph__empty"
            height="8"
            rx="4"
            width="640"
            x="0"
            y="8"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
